Fix list item tag offcentered text

--- a/components/src/core/list-item-tag/list-item-tag.component.scss
+++ b/components/src/core/list-item-tag/list-item-tag.component.scss
@@ -15,6 +15,7 @@
         font-weight: 700;
         text-transform: uppercase;
         letter-spacing: 1px;
+        margin-right: -1px;
         line-height: 1rem;
         font-size: 0.625rem;
     }
